--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,8 @@
         "src":"/(.*)",
         "dest":"/app.js",
         "headers":{
-            "Access-Control-Allow-Origin":"https://mernstack-frontend-phi.vercel.app"
+            "Access-Control-Allow-Origin":"https://mernstack-frontend-phi.vercel.app",
+            "Access-Control-Allow-Credentials":"true"
         }
     }
 ]
