--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
     "version":2,
     "builds":[ 
-       {  "src":"app.js", "use":"@vercel/node"}
+       {  "src":"*.js", "use":"@vercel/node"}
 ],
 "routes":[
     {
         "src":"/(.*)",
-        "dest":"/app.js",
+        "dest":"/",
         "headers":{
             "Access-Control-Allow-Origin":"https://mernstack-frontend-phi.vercel.app",
             "Access-Control-Allow-Credentials":"true"
