--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,12 @@
 "routes":[
     {
         "src":"/(.*)",
-        "dest":"/app.js"
+        "dest":"/app.js",
+        "method":["GET","POST","DELETE","PUT","PATCH","OPTIONS"],
+        "headers":{
+            "Access-Control-Allow-Origin":"https://mernstack-frontend-phi.vercel.app",
+            "Access-Control-Allow-Credentials":"true"
+        }
     }
 ]
 }
