--- a/config/.env
+++ b/config/.env
@@ -1,7 +1,7 @@
-# DB_URI= 'mongodb+srv://soomrush212:ahmadjan1@my-cluster.i0gyfov.mongodb.net/mernstack-app?retryWrites=true&w=majority'
-DB_URI= 'mongodb://soomrush212:ahmadjan1@ac-ux15x8w-shard-00-00.i0gyfov.mongodb.net:27017,ac-ux15x8w-shard-00-01.i0gyfov.mongodb.net:27017,ac-ux15x8w-shard-00-02.i0gyfov.mongodb.net:27017/mernaApp?ssl=true&replicaSet=atlas-v26p2r-shard-0&authSource=admin&retryWrites=true&w=majority'
+
+DB_URI= "mongodb://localhost:27017/react-project4"
+# 'mongodb://soomrush212:ahmadjan1@ac-ux15x8w-shard-00-00.i0gyfov.mongodb.net:27017,ac-ux15x8w-shard-00-01.i0gyfov.mongodb.net:27017,ac-ux15x8w-shard-00-02.i0gyfov.mongodb.net:27017/mernaApp?ssl=true&replicaSet=atlas-v26p2r-shard-0&authSource=admin&retryWrites=true&w=majority'
 PORT=4000
-CORS_ORIGIN='http://localhost:3000'
 
 CLOUDINARY_NAME=dw7nnruzm
 
