--- a/config/.env
+++ b/config/.env
@@ -1,5 +1,5 @@
 
-DB_URI= "mongodb+srv://soomrush212:ahmadjan1@my-cluster.i0gyfov.mongodb.net/mern-new-app?retryWrites=true&w=majority"
+DB_URI= "mongodb+srv://soomrush212:ahmadjan1@my-cluster.i0gyfov.mongodb.net/khanjan?retryWrites=true&w=majority"
 
 PORT=4000
 
