--- a/config/.env
+++ b/config/.env
@@ -1,5 +1,5 @@
 
-DB_URI= "mongodb://soomrush212:ahmadjan1@ac-ux15x8w-shard-00-00.i0gyfov.mongodb.net:27017,ac-ux15x8w-shard-00-01.i0gyfov.mongodb.net:27017,ac-ux15x8w-shard-00-02.i0gyfov.mongodb.net:27017/mernaApp?ssl=true&replicaSet=atlas-v26p2r-shard-0&authSource=admin&retryWrites=true&w=majority"
+DB_URI= "mongodb+srv://soomrush212:ahmadjan1@my-cluster.i0gyfov.mongodb.net/mynew?retryWrites=true&w=majority";
 
 PORT=4000
 
@@ -11,7 +11,7 @@ CLOUDINARY_API_SECRET=jVpD-ZVIChRKcqj84yVzndmJoOk
 SECRET=lskjrsdjflsdfjghdflgu43805287
 
 SMTP_SERVICE="gmail"
-SMTP_MAIL="naqeebahmad212@gmail.com"
+SMTP_MAIL="naqeebahmad212@gmail.com";
 SMTP_PASSWORD="zhkdbxaoobfxvbmr"
 
 
